5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3995/executions/1592_2043.log
== TEST (2019-03-25 14:33:42) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:)"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:54) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:09) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:22) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:26) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:36:55) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/100
print(var5)
-- OUTPUT:
0.82
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:25) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:38:34) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float(var1+var2*2+var3*3+var4*4)/1+2+3+4
print(var5)
-- EXECUTION TIME:
0.172667
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:53:32) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(var5)
-- EXECUTION TIME:
0.141087
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:53:33) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:53:46) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(var5)
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:53:48) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(var5)
-- EXECUTION TIME:
0.252879
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36000000000001
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:05) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 3)
-- EXECUTION TIME:
0.175975
-- ERROR:
  File "/home/codebench/codes/1592/2043/main.py", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:07) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 3)
-- ERROR:
File "XXXX", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:13) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 3))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:25) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 3))
-- EXECUTION TIME:
0.174825
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:33) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 2))
-- OUTPUT:
91.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:54:42) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/1+2+3+4)
print(round(var5, 2))
-- EXECUTION TIME:
0.122402
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
91.0
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
79.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
88.36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:15) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/10)
print(round(var5, 2))
-- EXECUTION TIME:
0.139115
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
primeira nota:segunda nota:terceira nota:quarta nota:8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
primeira nota:segunda nota:terceira nota:quarta nota:7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
primeira nota:segunda nota:terceira nota:quarta nota:7.94
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:55:16) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/10)
print(round(var5, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:17) 
-- CODE:
var1=float(input("primeira nota:"))
var2=float(input("segunda nota:"))
var3=float(input("terceira nota:"))
var4=float(input("quarta nota:"))
var5=float((var1+var2*2+var3*3+var4*4)/10)
print(round(var5, 2))
-- EXECUTION TIME:
0.127023
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
